<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:text="Question"
        android:textSize="20sp"
        android:textColor="@color/blackTextColor"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/question"
        android:layout_margin="10dp"
        android:drawableStart="@drawable/ic_created_by"
        android:drawableTint="@color/colorSecondaryVariant"
        android:text="User Name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorSecondaryVariant"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/lbl_prices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@null"
        android:text="@string/str_answers_title"
        android:textColor="@color/black_light"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbl_prices"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/str_empty_data"
        android:textColor="@color/gray_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lbl_prices"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        tools:listitem="@layout/item_answer" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_add_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/str_chat"
        android:text="@string/str_add_answer"
        app:backgroundTint="@color/orange"
        app:icon="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/str_chat"
        android:text="@string/str_chat"
        app:icon="@drawable/ic_chat_white" />
</RelativeLayout>